// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly desktop version 1`] = `
<div>
  <div
    class="subtitle"
  >
    General
  </div>
  <div>
    mock-select-control id:
    select-lang
    label:
    Language
    options:
    [{"label":"Deutsche","selected":false,"value":"de"},{"label":"English","selected":true,"value":"en"},{"label":"Español","selected":false,"value":"es"},{"label":"日本語","selected":false,"value":"ja"},{"label":"简体中文","selected":false,"value":"zh-cn"},{"label":"繁體中文","selected":false,"value":"zh-tw"}]
    <input
      class="select-control"
    />
  </div>
  <div>
    mock-select-control id:
    set-notifications
    label:
    Desktop Notifications
    options:
    [{"label":"On","selected":true,"value":"TRUE"},{"label":"Off","selected":false,"value":"FALSE"}]
    <input
      class="select-control"
    />
  </div>
</div>
`;

exports[`should render correctly web version 1`] = `
<div>
  <div
    class="subtitle"
  >
    General
  </div>
  <div>
    mock-select-control id:
    select-lang
    label:
    Language
    options:
    [{"label":"Deutsche","selected":false,"value":"de"},{"label":"English","selected":true,"value":"en"},{"label":"Español","selected":false,"value":"es"},{"label":"日本語","selected":false,"value":"ja"},{"label":"简体中文","selected":false,"value":"zh-cn"},{"label":"繁體中文","selected":false,"value":"zh-tw"}]
    <input
      class="select-control"
    />
  </div>
</div>
`;
